werewolves.fyi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: werewolves-web
spec:
  selector:
    app: werewolves-fyi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
