werewolves.fyi/werewolves-fyi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: werewolves-fyi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: werewolves-deployment
  namespace: werewolves-fyi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: werewolves-fyi
  template:
    metadata:
      labels:
        app: werewolves-fyi
    spec:
      containers:
      - name: werewolves-fyi
        image: werewolves-fyi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: werewolves-service
  namespace: werewolves-fyi
spec:
  selector:
    app: caddy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: werwolves-ingress
  namespace: werewolves-fyi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: werewolves.fyi
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: werewolves-fyi
              port:
                number: 80
  tls:
  - hosts:
    - werewolves.fyi
    secretName: werewolves-fyi-tls-secret
